--- a/2006.html
+++ b/2006.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>IIT Madras Open Quiz</title>
+        <a href = ./index.html><title>IIT Madras Open Quiz</title></a>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -55,9 +55,9 @@
                     </a>  
 
                     <!-- Be sure to leave the brand out there if you want it shown -->  
-                    <a class="brand" href="#" style="font-size:26px;">IITM Open Quiz</a>  
+                    <a class="brand" href="./index.html" style="font-size:26px;">IITM Open Quiz</a>  
                     <ul class="nav">
-                         <li><a href="./Home2.html"><i class="icon-home"></i> Home</a></li>
+                         <li><a href="./index.html"><i class="icon-home"></i> Home</a></li>
 
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-book"></i> Archives<b class="caret"></b></a>
@@ -65,7 +65,7 @@
                             <li class ="active"><a href="./2006.html">2006</a></li>
                             <li><a href="./2007.html">2007</a></li>
                             <li><a href="./2011.html">2011</a></li>
-                            <li><a href="./2012.html">2012</a></li>
+                            <!--<li><a href="./2012.html">2012</a></li>-->
                         </ul>
                         </li>
                         <li><a href="./FAQs.html"><i class="icon-question-sign"></i> FAQs</a></li>
