Added script for date replace

--- a/2007.html
+++ b/2007.html
@@ -237,10 +237,11 @@
 
             </div>
             <div class="span4">
-                <h3> 50 days remaining</h3>
+                <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)">40 days remaining</h2></center>
                 <div class="progress progress-success progress-striped active">
-                    <div class="bar" style="width: 50%;"></div>
+                    <div class="bar" style="width: 34%;"></div>
                 </div>
+                <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)">Previous Sponsors</h2></center>
                 <div id="myCarousel" class="carousel slide" style = "max-height:280px">
                     <!-- Carousel items -->
                     <div class="carousel-inner">
