--- a/2012.html
+++ b/2012.html
@@ -87,10 +87,11 @@
                     <h1 style="font-family:Yanone Kaffeesatz;font-size:48px;text-shadow:4px 4px 0px rgb(217,217,217);">IITM Open Quiz 2012</h1><br><br><br>
                 </div>
                 <div class="span4">
-                    <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)"> 50 days remaining</h2></center>
+                    <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)">40 days remaining</h2></center>
                     <div class="progress progress-striped">
-                        <div class="bar" style="width: 50%;"></div>
+                        <div class="bar" style="width: 34%;"></div>
                     </div>
+                    <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)">Previous Sponsors</h2></center>
                     <div id="myCarousel" class="carousel slide" style = "max-height:280px">
                         <!-- Carousel items -->
                         <div class="carousel-inner">
