--- a/Archives.html
+++ b/Archives.html
@@ -67,7 +67,7 @@
             <h2>Le Archives</h2>
         </div>
         <div class="span4">
-            <h3> 50 days remaining</h3>
+            <h3> $(($d2-$d1))40 days remaining</h3>
             <div class="progress progress-success progress-striped active">
                 <div class="bar" style="width: 50%;"></div>
             </div>
