--- a/2011.html
+++ b/2011.html
@@ -263,10 +263,11 @@
                     </div>
                 </div>
                 <div class="span4">
-                    <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)"> 50 days remaining</h2></center>
+                    <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)">40 days remaining</h2></center>
                     <div class="progress progress-striped">
-                        <div class="bar" style="width: 50%;"></div>
+                        <div class="bar" style="width: 34%;"></div>
                     </div>
+                    <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)">Previous Sponsors</h2></center>
                     <div id="myCarousel" class="carousel slide" style = "max-height:280px">
                         <!-- Carousel items -->
                         <div class="carousel-inner">
