--- a/Contact.html
+++ b/Contact.html
@@ -56,7 +56,7 @@
       <!-- Be sure to leave the brand out there if you want it shown -->  
             <a class="brand" href="./index.html" style="font-size:26px;">IITM Open Quiz</a>  
             <ul class="nav">
-                        <li><a href="./Home2.html"><i class="icon-home"></i> Home</a></li>
+                        <li><a href="./index.html"><i class="icon-home"></i> Home</a></li>
 
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-book"></i> Archives<b class="caret"></b></a>
@@ -101,10 +101,11 @@
             </address>
         </div>
         <div class="span4">
-            <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)"> 50 days remaining</h2></center>
+            <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)">40 days remaining</h2></center>
                     <div class="progress progress-striped">
-                <div class="bar" style="width: 50%;"></div>
+                <div class="bar" style="width: 34%;"></div>
             </div>
+            <center><h2 style="font-family:Arial;text-shadow:2px 2px 0px rgb(217,217,217)">Previous Sponsors</h2></center>
             <div id="myCarousel" class="carousel slide" style = "max-height:280px">
                     <!-- Carousel items -->
                         <div class="carousel-inner">
